--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-app",
   "version": "0.1.0",
-  "homepage": "https://github.com/xmkchen/react-clicky-game.git",
+  "homepage": "https://xmkchen.github.io/react-clicky-game/",
   "private": true,
   "dependencies": {
     "react": "^16.8.6",
